# sri

./: .dockerignore  .env.template  .gitignore  ANDROID_INTEGRATION.md  DEPLOYMENT.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_SUMMARY.md  Dockerfile  IMPLEMENTATION_NOTES.md  Makefile  README.md  TICKET_COMPLETION_CHECKLIST.md  compose.dev.yaml  compose.override.yaml.example  compose.yaml  gunicorn_conf.py  pyproject.toml  requirements.txt
.github/workflows/: backend-ci.yaml
android/: README.md  build.gradle  build.gradle.kts  gradle.properties  gradlew  local.properties  proguard-rules.pro  settings.gradle  settings.gradle.kts
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/assistant/voicecore/: VoiceCoreApplication.kt
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
android/src/main/: AndroidManifest.xml
android/src/main/java/com/voiceassistant/android/: MainActivity.kt  VoiceAssistantApp.kt
android/src/main/java/com/voiceassistant/android/config/: AppConfig.kt
app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  repositories.py  schemas.py  services.py
app/routers/: __init__.py  conversation.py  health.py  history.py  preferences.py  sms.py  users.py
scripts/: README.md  entrypoint.sh  quick-start.sh  test-docker.sh
tests/: __init__.py  conftest.py  test_endpoints.py  test_repositories.py  test_schemas.py  test_services.py
(+49 files in other folders)
