[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backend-service"
version = "0.1.0"
description = "FastAPI backend service with OpenAI integration"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlmodel==0.0.14",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "openai==1.3.0",
    "python-dotenv==1.0.0",
    "httpx==0.25.2",
    "tenacity==8.2.3",
    "python-multipart==0.0.6",
    "aiosqlite==0.19.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.7.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
